# rust_6ex

./: README.md
rata_rag_1/: Cargo.toml  README.md  sample.cpp
rata_rag_1/include/: my_rag.hpp
rata_rag_1/src/: main.rs
rata_rag_2/: Cargo.toml  Makefile  README.md  sample.cpp
rata_rag_2/include/: GeminiEmbeddingClient.hpp  http_client.hpp  my_rag.hpp  qdrant_client.hpp
rs_sqlite_1/: Cargo.toml  Makefile  README.md  sample.cpp
rs_sqlite_1/include/: my_db.hpp  my_todo.hpp
rs_sqlite_1/src/: main.rs
rs_todo_1/: Cargo.toml  Makefile  README.md  sample.cpp
rs_todo_1/include/: my_todo.hpp
rs_todo_1/src/: main.rs
