[package]
name = "rs_todo_1"
version = "0.1.0"
authors = ["naka"]
license = "MIT"
edition = "2021"

[dependencies]
cxx = "1"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-build = "1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
